--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@bang88/react-native-ultimate-listview": "^4.1.0",
+    "lodash": "^4.17.21",
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-gesture-handler": "^2.7.1",
-    "react-native-reanimated": "^2.10.0"
+    "react-native-reanimated": "^2.10.0",
+    "react-native-redash": "^18.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
