--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "lodash": "^4.17.21",
     "react": "18.1.0",
     "react-native": "0.70.3",
+    "react-native-dnd-board": "^0.0.7",
+    "react-native-draggable-flatlist": "^4.0.0",
+    "react-native-fresh-refresh": "^2.1.1",
     "react-native-gesture-handler": "^2.7.1",
     "react-native-reanimated": "^2.10.0",
-    "react-native-redash": "^18.1.0"
+    "react-native-redash": "^18.1.0",
+    "react-native-scrollable-tab-view": "^1.0.0",
+    "react-native-smooth-pull-to-refresh": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
